Minor adjustments in font

--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -10,6 +10,12 @@ table {
 .env {
   color: lightgray; float: right; font: bold 96px/1.5 Arial, sans-serif; text-align: left; padding-right: 35%; width: 45%;
 }
+.name {
+   border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em 0 0;
+}
+.count {
+   border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green;
+}
 </style>
   <body>
     <p>Hi there, from <b>{{ .CurrentHost }}</b>!
@@ -21,8 +27,8 @@ table {
       </tr>
       {{ range .Hits }}
       <tr>
-        <td style='border: 1px solid green;'>{{ .Host }}</td>
-        <td style='border: 1px solid green; text-align: center;'>{{ .Count }}</td>
+        <td class='name'>{{ .Host }}</td>
+        <td class='count'>{{ .Count }}</td>
       </tr>
       {{ end }}
     </table>
