Fix for missing </p> tag

--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -9,7 +9,7 @@ table { width: 10em; border-collapse: collapse; float: left; }
     </style>
   <head>
   <body>
-    <p>Hi there, from <b>{{ .CurrentHost }}</b>!
+    <p>Hi there, from <b>{{ .CurrentHost }}</b>!</p>
     <hr/>
     <table>
       <tr>
