Fix for missing </head> tag

--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -7,7 +7,7 @@ table { width: 10em; border-collapse: collapse; float: left; }
 .name { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em 0 0; }
 .count { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green; }
     </style>
-  <head>
+  </head>
   <body>
     <p>Hi there, from <b>{{ .CurrentHost }}</b>!</p>
     <hr/>
