--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -9,15 +9,18 @@ table { width: 10em; border-collapse: collapse; float: left; }
 .count { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green; }
 span { background-color: yellow; font:small-caption; }
 a { font:caption; }
+.refresh { padding: 0 .5em; background: lightblue; text-align: center; font: bold .8em/1.2 Arial, sans-serif; border: 1px solid #000; margin: -3% 0 0 20%; width: 10em; text-decoration: none; }
+.refresh a { text-decoration: none; }
     </style>
   </head>
   <body>
     <p>Hi there, from <b>{{ .CurrentHost }}</b>!
-    {{if eq .Context "viewer"}}
+    {{ if eq .Context "viewer" }}
     <span> Note: This page shows stats and does not increment counts.</span></p>
     To increment the counters, go to the <a href="/">Demo</a> page.
-    {{else}}
-    </p>To view stats, go to the <a href="/stats">Stats</a> page.
+    {{ else }}
+    </p><div class="refresh"><a href=".">Increment counter (Refresh)</a></div>
+    To view stats, go to the <a href="/stats">Stats</a> page.
     {{ end }}
     <hr/>
     <div class='cover'>
@@ -32,7 +35,7 @@ a { font:caption; }
           <td class='count'>{{ .Count }}</td>
         </tr>
         {{ end }}
-        {{if eq .Context "viewer"}}
+        {{ if eq .Context "viewer" }}
         <tr>
           <th class='name'><strong>Total</strong></th>
           <th class='count'><strong>{{ .Total }}</strong></th>
