Cosmetic: Added hover

--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -10,6 +10,7 @@ table { width: 10em; border-collapse: collapse; float: left; }
 span { background-color: yellow; font:small-caption; }
 a { font:caption; }
 .refresh { padding: 0 .5em; background: lightblue; text-align: center; font: bold .8em/1.2 Arial, sans-serif; border: 1px solid #000; margin: -3% 0 0 20%; width: 10em; text-decoration: none; }
+.refresh:hover { background: cornflowerblue; }
 .refresh a { text-decoration: none; }
     </style>
   </head>
