--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -9,8 +9,8 @@ table { width: 10em; border-collapse: collapse; float: left; }
 .count { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green; }
 span { background-color: yellow; font:small-caption; }
 a { font:caption; }
-.refresh { padding: 0 .5em; background: lightblue; text-align: center; font: bold .8em/1.2 Arial, sans-serif; border: 1px solid #000; margin: -3% 0 0 20%; width: 10em; text-decoration: none; }
-.refresh:hover { background: cornflowerblue; }
+.refresh { padding: 0 .5em; background: lightsteelblue; text-align: center; font: bold .8em/1.2 Arial, sans-serif; border: 1px solid gray; margin: -3% 0 0 20%; width: 10em; text-decoration: none; }
+.refresh:hover { background: lightblue; box-shadow: 10px 10px lightgray; }
 .refresh a { text-decoration: none; }
     </style>
   </head>
