Fix for url to be pulled dynamically

--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -2,7 +2,7 @@
   <head>
     <script type="text/javascript">
 function showTotalInBanner() {
-  var ws = new WebSocket("ws://localhost:30000/total");
+  var ws = new WebSocket("ws://" + location.host + "/total");
   ws.onopen = function () {
     console.log("Opened Websocket connection");
   };
