--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -21,7 +21,7 @@ function showTotalInBanner() {
     <style> 
 #active { width: 0.6em; height: 0.6em; background: green; }
 #dead { width: 0.6em; height: 0.6em; background: lightgray; }
-#totalInBanner { font: 46px Arial, sans-serif; color: white; background: #ffbd17; float: right; margin-right: 2em; border-radius: 10px; margin-top: -0.7em; }
+#totalInBanner { padding: 0 10; font: 46px Arial, sans-serif; color: white; background: #ffbd17; float: right; margin-right: 2em; border-radius: 10px; margin-top: -0.7em; }
 .circle { border-radius: 50%; display: inline-block; margin: 5px; }
 .cover { max-width: 66% }
 .env { color: lightgray; float: right; font: bold 96px/1.5 Arial, sans-serif; text-align: left; width: 45%; display: inline-block; white-space: nowrap; text-shadow: 2px 2px #FFFFFF; }
