--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -26,7 +26,7 @@ function showTotalInBanner() {
 .cover { max-width: 66% }
 .env { color: lightgray; float: right; font: bold 96px/1.5 Arial, sans-serif; text-align: left; width: 45%; display: inline-block; white-space: nowrap; text-shadow: 2px 2px #FFFFFF; }
 .name { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em 0 0; }
-.count { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green; }
+.count, .slno { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green; }
 .refresh { padding: 0 .5em; background: lightsteelblue; text-align: center; font: bold .8em/1.2 Arial, sans-serif; border: 1px solid gray; margin: -3% 0 0 20%; width: 10em; text-decoration: none; }
 .refresh:hover { background: lightblue; box-shadow: 5px 5px lightgray; cursor: pointer; cursor: hand; }
 .refresh:active { background: blue; box-shadow: 5px 5px gray; }
@@ -35,6 +35,8 @@ a { font:caption; }
 img { transform: rotate({{ .Rotate }}deg); display: block; margin: 0 10%; }
 span { background-color: yellow; font:small-caption; }
 table { width: 10em; border-collapse: collapse; float: left; }
+table.pCounted { counter-reset:paragraph; }
+table.pCounted tr td.slno:after, table.pCounted tr td.slno::after { counter-increment:paragraph; content: counter(paragraph); }
     </style>
   </head>
   <body onload="javascript:showTotalInBanner();">
@@ -50,15 +52,17 @@ table { width: 10em; border-collapse: collapse; float: left; }
     <div id="container">
       <hr/>
       <div class='cover'>
-        <table>
+        <table class="pCounted">
           <tr>
             <th style='border: 2px dotted green;'>#</th>
+            <th style='border: 2px dotted green;'> </th>
             <th style='border: 2px dotted green;'>Container</th>
             <th style='padding: 5px; border: 2px dotted green;'>#</th>
           </tr>
           {{ range .Hits }}
           {{ if eq .Active 1 }}
           <tr>
+            <td class="slno"></td>
             <td class="name">
               <div id="active" class="circle"></div>
             </td>
@@ -71,6 +75,7 @@ table { width: 10em; border-collapse: collapse; float: left; }
           {{ range .Hits }}
           {{ if eq .Active 0 }}
           <tr>
+            <td class="slno"></td>
             <td class="name">
               <div id="dead" class="circle"></div>
             </td>
