--- a/src/tmpl/demo.html
+++ b/src/tmpl/demo.html
@@ -26,7 +26,8 @@ function showTotalInBanner() {
 .cover { max-width: 66% }
 .env { color: lightgray; float: right; font: bold 96px/1.5 Arial, sans-serif; text-align: left; width: 45%; display: inline-block; white-space: nowrap; text-shadow: 2px 2px #FFFFFF; }
 .name { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em 0 0; }
-.count, .slno { border: 1px solid green; font: normal 1.5em monospace; padding: 0 .25em; color: green; }
+.count { border: 1px dotted green; font: normal 1.5em monospace; padding: 0 .25em; color: green; text-align: right; }
+.slno { border: 1px solid green; text-align: right; font: normal 0.8em monospace; color: #000; }
 .refresh { padding: 0 .5em; background: lightsteelblue; text-align: center; font: bold .8em/1.2 Arial, sans-serif; border: 1px solid gray; margin: -3% 0 0 20%; width: 10em; text-decoration: none; }
 .refresh:hover { background: lightblue; box-shadow: 5px 5px lightgray; cursor: pointer; cursor: hand; }
 .refresh:active { background: blue; box-shadow: 5px 5px gray; }
@@ -36,7 +37,7 @@ img { transform: rotate({{ .Rotate }}deg); display: block; margin: 0 10%; }
 span { background-color: yellow; font:small-caption; }
 table { width: 10em; border-collapse: collapse; float: left; }
 table.pCounted { counter-reset:paragraph; }
-table.pCounted tr td.slno:after, table.pCounted tr td.slno::after { counter-increment:paragraph; content: counter(paragraph); }
+table.pCounted tr td.slno:before, table.pCounted tr td.slno::before { counter-increment:paragraph; content: counter(paragraph); }
     </style>
   </head>
   <body onload="javascript:showTotalInBanner();">
@@ -55,15 +56,14 @@ table.pCounted tr td.slno:after, table.pCounted tr td.slno::after { counter-incr
         <table class="pCounted">
           <tr>
             <th style='border: 2px dotted green;'>#</th>
-            <th style='border: 2px dotted green;'> </th>
-            <th style='border: 2px dotted green;'>Container</th>
-            <th style='padding: 5px; border: 2px dotted green;'>#</th>
+            <th style='border: 2px dotted green;' colspan="2">Container / Pod</th>
+            <th style='padding: 5px; border: 2px dotted green;'>Hits</th>
           </tr>
           {{ range .Hits }}
           {{ if eq .Active 1 }}
           <tr>
-            <td class="slno"></td>
-            <td class="name">
+            <td class="slno">.</td>
+            <td class="name" style="border-right: solid 1px #fff">
               <div id="active" class="circle"></div>
             </td>
             <td class='name'><nobr>{{ .Host }}</nobr></td>
@@ -75,8 +75,8 @@ table.pCounted tr td.slno:after, table.pCounted tr td.slno::after { counter-incr
           {{ range .Hits }}
           {{ if eq .Active 0 }}
           <tr>
-            <td class="slno"></td>
-            <td class="name">
+            <td class="slno">.</td>
+            <td class="name" style="border-right: solid 1px #fff">
               <div id="dead" class="circle"></div>
             </td>
             <td class='name'><nobr>{{ .Host }}</nobr></td>
@@ -85,8 +85,8 @@ table.pCounted tr td.slno:after, table.pCounted tr td.slno::after { counter-incr
           {{ end }}
           {{ end }}
           <tr>
-            <th class='name' colspan="2"><strong>Total</strong></th>
-            <th class='count'><strong>{{ .Total }}</strong></th>
+            <th style='border: 2px solid green;' class='name' colspan="3"><strong>Total</strong></th>
+            <th style='border: 2px solid green; font: normal 1.2em monospace;' class='count'><strong>{{ .Total }}</strong></th>
           </tr>
           {{ end }}
         </table>
